 * Fixed some bugs in comment.php which were caused by earlier changes.
 * E-mails about an added comment are now sent From $useraddress, Sender
 $likebackMail, replyTo $likebackMail.
 * Made comment.php also send e-mails to every interested developer when a
 remark is added.
 * Workarounded a PHP bug in e-mail word wrapping when a line was exactly 80
 characters.
 * Some other interface changes.

2009-04-22 (dazjorz)
 * Added functions.inc.php with validStatuses(), validTypes() and
 maybeStrip().
 * Started using these three functions throughout the code.
 * Added two (production-safe) warnings to functions.php (yes, the other
 functions file).
 * Added db_fetchAll() function to fetch all objects returned by a query, and 
 used it in view.php.
 * Added db_buildQuery_checkArray() function to build the conditional part of
 a query based on an element name and an array of possible values.
 * Revised the way view.php creates a conditional query using
 db_buildQuery_checkArray().
 * Implemented a version split in send.php: '2.0beta1-svn (4658 >= 20090421)'
 is split up in fullVersion (that string) and version='2.0beta1-svn'.
 * Made send.php use validTypes() too.
 * Added upgrade script to upgrade the LikeBack table and all contents to the
 version/fullVersion system, and modified install script to allow that from
 the start.
 * Fixed install.php to detect if installation already ran.
 * Moved locales_string.php to functions.inc.php.
 * Added getDeveloper() function to db.php.
 * Removed $developer argument to getSmartyObject, because it now calls
 getDeveloper().
 * Made send.php use functions.inc.php and getSmartyObject etc too.
 * Added wrapQuote() Smarty modifier.
 * Added $noDeveloper argument to getSmartyObject, to not call getDeveloper()
 when called from send.php.

2009-04-21 (dazjorz)
 * Correctly templatized version, locale, status and type choosing in viewfilters.tpl.
 * Removed old piece of code from view.php (ajax-related, so it's in ajax.php
 now)
