@@ -59,6 +59,11 @@ if (isset($_POST['saveOptions'])) {
 
 include("header.php");
 
+echo lbHeader();
+$subBarContents = '<a href="view.php?useSessionFilter=true"><img src="icons/gohome.png" width="32" height="32" alt=""></a> &nbsp; &nbsp;
+   <strong><img src="icons/email.png" width="16" height="16" alt="" title="" /> E-Mail Options</strong> &nbsp; &nbsp; '.$developer->login;
+echo subBar( 'Options', $subBarContents );
+
 $smarty = getSmartyObject();
 
 $likeChecked    = (matchType($developer->types, "Like")    ? 'checked="checked"' : "");
