@@ -1,12 +1,4 @@
   
-  <p class="header">
-  </p>
-
-  <div class="subBar Options">
-   <a href="view.php?useSessionFilter=true"><img src="icons/gohome.png" width="32" height="32" alt=""></a> &nbsp; &nbsp;
-   <strong><img src="icons/email.png" width="16" height="16" alt="" title="" /> E-Mail Options</strong> &nbsp; &nbsp; {$developer->login}
-  </div>
-
   <div class="content">
    <form action="options.php" method="post">
     <p class="Options" style="padding: 5px">
